--- a/TOPI/src/Telas/Cadastros/CadastroUsuarioInternalFrame.form
+++ b/TOPI/src/Telas/Cadastros/CadastroUsuarioInternalFrame.form
@@ -44,7 +44,6 @@
                   <Component id="jLblDataNascimento" min="-2" max="-2" attributes="0"/>
                   <Component id="jLblCpf" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="jLblEstadoCivil" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLblRendaMensal" alignment="1" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -52,16 +51,18 @@
                   <Component id="jTxtNomeCliente" max="32767" attributes="0"/>
                   <Component id="jTxtSobrenome" max="32767" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
-                      <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                          <Component id="jTxtRendaMensal" max="32767" attributes="0"/>
-                          <Component id="jCbxEstadoCivil" alignment="0" pref="157" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                      <Component id="jCbxEstadoCivil" min="-2" pref="157" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jBtnSalvar" max="32767" attributes="0"/>
-                          <Component id="jCbxProfissao" max="32767" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="jLblRendaMensal" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
+                              <Component id="jTxtRendaMensal" max="32767" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="jBtnSalvar" max="32767" attributes="0"/>
+                              <EmptySpace min="-2" pref="8" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
@@ -78,7 +79,7 @@
                           </Group>
                           <Component id="jTxtCpf" alignment="0" min="-2" pref="347" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="0" pref="37" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="38" max="32767" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
@@ -117,19 +118,19 @@
                   <Component id="jTxtCpf" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLblEstadoCivil" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jCbxEstadoCivil" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jCbxProfissao" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="jLblRendaMensal" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTxtRendaMensal" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
+                  <Group type="103" groupAlignment="3" attributes="0">
+                      <Component id="jLblEstadoCivil" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jCbxEstadoCivil" alignment="3" min="-2" max="-2" attributes="0"/>
+                  </Group>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLblRendaMensal" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jTxtRendaMensal" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jBtnSalvar" alignment="3" min="-2" max="-2" attributes="0"/>
-              </Group>
-              <EmptySpace pref="25" max="32767" attributes="0"/>
+              <Component id="jBtnSalvar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="19" max="32767" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -220,25 +221,6 @@
             <StringItem index="0" value="Solteiro"/>
             <StringItem index="1" value="Casado"/>
             <StringItem index="2" value="Divorciado"/>
-          </StringArray>
-        </Property>
-      </Properties>
-      <AuxValues>
-        <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-      </AuxValues>
-    </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="Profiss&#xe3;o"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JComboBox" name="jCbxProfissao">
-      <Properties>
-        <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="Pedreiro"/>
-            <StringItem index="1" value="Carpinteiro"/>
-            <StringItem index="2" value="Programador"/>
           </StringArray>
         </Property>
       </Properties>
