--- a/TOPI/src/Telas/Cadastros/CadastroMovimentacaoInternalFrame.form
+++ b/TOPI/src/Telas/Cadastros/CadastroMovimentacaoInternalFrame.form
@@ -123,10 +123,7 @@
     <Component class="javax.swing.JComboBox" name="jCbxTipoMovimentacao">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="2">
-            <StringItem index="0" value="Alimenta&#xe7;&#xe3;o"/>
-            <StringItem index="1" value="Vale Transporte"/>
-          </StringArray>
+          <StringArray count="0"/>
         </Property>
       </Properties>
       <AuxValues>
