--- a/TOPI/src/Telas/Relatorios/RelatorioMovimentacaoInternalFrame.form
+++ b/TOPI/src/Telas/Relatorios/RelatorioMovimentacaoInternalFrame.form
@@ -27,11 +27,9 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLblSaldo" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="JLblSaldo" min="-2" pref="62" max="-2" attributes="0"/>
+              <Component id="jTxtSaldo" min="-2" pref="62" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jBtnExcluir" min="-2" pref="100" max="-2" attributes="0"/>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="jBtnEditar" min="-2" pref="100" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
@@ -44,12 +42,9 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLblSaldo" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="JLblSaldo" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jTxtSaldo" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Group type="103" alignment="0" groupAlignment="3" attributes="0">
-                      <Component id="jBtnEditar" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="jBtnExcluir" alignment="3" min="-2" max="-2" attributes="0"/>
-                  </Group>
+                  <Component id="jBtnExcluir" alignment="0" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="20" max="32767" attributes="0"/>
           </Group>
@@ -67,8 +62,9 @@
         <Component class="javax.swing.JTable" name="jTbMovimentacao">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="4" rowCount="4">
+              <Table columnCount="5" rowCount="0">
                 <Column editable="false" title="Tipo" type="java.lang.Object"/>
+                <Column editable="true" title="Situa&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Data" type="java.lang.Object"/>
                 <Column editable="false" title="Valor" type="java.lang.Object"/>
@@ -83,20 +79,9 @@
         <Property name="text" type="java.lang.String" value="Saldo: R$"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="JLblSaldo">
+    <Component class="javax.swing.JLabel" name="jTxtSaldo">
       <Properties>
         <Property name="text" type="java.lang.String" value="125.000,00"/>
-      </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="jBtnEditar">
-      <Properties>
-        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-          <Color blue="c0" green="c0" id="lightGray" palette="1" red="c0" type="palette"/>
-        </Property>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagens/baseline_edit_black_18dp.png"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Editar"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="jBtnExcluir">
