--- a/TOPI/src/Telas/Relatorios/RelatorioMovimentacaoInternalFrame.form
+++ b/TOPI/src/Telas/Relatorios/RelatorioMovimentacaoInternalFrame.form
@@ -62,9 +62,10 @@
         <Component class="javax.swing.JTable" name="jTbMovimentacao">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="5" rowCount="0">
+              <Table columnCount="6" rowCount="0">
+                <Column editable="false" title="Codigo" type="java.lang.Object"/>
                 <Column editable="false" title="Tipo" type="java.lang.Object"/>
-                <Column editable="true" title="Situa&#xe7;&#xe3;o" type="java.lang.Object"/>
+                <Column editable="false" title="Situa&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Data" type="java.lang.Object"/>
                 <Column editable="false" title="Valor" type="java.lang.Object"/>
