--- a/TOPI/src/Telas/Relatorios/RelatorioTipoMovimentacaoInternalFrame.form
+++ b/TOPI/src/Telas/Relatorios/RelatorioTipoMovimentacaoInternalFrame.form
@@ -57,7 +57,8 @@
         <Component class="javax.swing.JTable" name="jTbTipoMovimentacao">
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-              <Table columnCount="2" rowCount="0">
+              <Table columnCount="3" rowCount="0">
+                <Column editable="false" title="Codigo" type="java.lang.Object"/>
                 <Column editable="false" title="Descri&#xe7;&#xe3;o" type="java.lang.Object"/>
                 <Column editable="false" title="Observa&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
@@ -90,6 +91,9 @@
               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jTbTipoMovimentacaoMouseClicked"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
