--- a/TOPI/src/Telas/Cadastros/CadastroMovimentacaoInternalFrame.form
+++ b/TOPI/src/Telas/Cadastros/CadastroMovimentacaoInternalFrame.form
@@ -231,11 +231,12 @@
               <Font name="SansSerif" size="12" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
-                <StringItem index="0" value="Diariamente"/>
-                <StringItem index="1" value="Semanalmente"/>
-                <StringItem index="2" value="Mensalmente"/>
-                <StringItem index="3" value="Anualmente"/>
+              <StringArray count="5">
+                <StringItem index="0" value="N&#xe3;o Repete"/>
+                <StringItem index="1" value="Diariamente"/>
+                <StringItem index="2" value="Semanalmente"/>
+                <StringItem index="3" value="Mensalmente"/>
+                <StringItem index="4" value="Anualmente"/>
               </StringArray>
             </Property>
           </Properties>
